# neurosurfer

./: .env.example  .gitignore  404.html  ARCHITECT_V2_PLAN.md  ARCHITECT_V2_PROGRESS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  NOTICE  README-pypi.md  README.md  RESTRUCTURE_PLAN.md  SECURITY.md  STUDIO_PLAN.md  STUDIO_PROGRESS.md  docker-compose.langfuse.yml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  quickstart_server.py  real_time_summary.txt  requirements.txt  requirements_docs.txt  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  cleanup.yml  docs.yml  publish.yml
about/changelog/: index.html
about/contributing/: index.html
about/roadmap/: index.html
api-reference/: index.html
api-reference/agents/: index.html
api-reference/configuration/: index.html
api-reference/database/: index.html
api-reference/models/: index.html
api-reference/rag/: index.html
api-reference/tools/: index.html
api-reference/vectorstores/: index.html
architect/: index.html
architect/building/: index.html
architect/how-it-works/: index.html
changelog/: index.html
cli/: index.html
contributing/: index.html
docs/: cli.md  contributing.md  getting-started.md  index.md  observability-roadmap.md
docs/about/: changelog.md  roadmap.md
docs/api-reference/: configuration.md  index.md
docs/architect/: building.md  how-it-works.md  index.md
docs/cli/: index.md
docs/examples/: agents-examples.md  custom-tools-examples.md  index.md  models-examples.md  rag-examples.md  server-app-example.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: agents.md  architect.md  configuration.md  context.md  graph-workflows.md  mcp.md  observability.md  providers.md  rag.md  structured-output.md  subagents.md  tasks.md  tools.md
docs/learn/: architecture.md  concepts.md  permissions.md
docs/observability/: custom-exporters.md  index.md  langfuse.md  opentelemetry.md
docs/plans/: INTEGRATIONS_PLAN.md  RESTRUCTURE_PLAN.md
docs/reference/: cli.md  tools-catalog.md
docs/server/: agents.md  backends.md  deployment.md  example-app.md  hooks.md  index.md  neurosurferui.md
docs/stylesheets/: extra.css
docs/tutorials/: custom-tools.md  graph-agents.md  index.md  insight-engine.md  installation.md  mcp-servers.md  providers-and-agents.md  sql-agent.md
examples/: index.html
examples/agents-examples/: index.html
examples/custom-tools-examples/: index.html
examples/models-examples/: index.html
examples/rag-examples/: index.html
examples/server-app-example/: index.html
getting-started/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/agents/: index.html
guides/architect/: index.html
guides/configuration/: index.html
guides/context/: index.html
guides/graph-workflows/: index.html
guides/mcp/: index.html
guides/observability/: index.html
guides/providers/: index.html
guides/rag/: index.html
guides/structured-output/: index.html
guides/subagents/: index.html
guides/tasks/: index.html
guides/tools/: index.html
guides/tools-catalog/: index.html
learn/architecture/: index.html
learn/concepts/: index.html
learn/permissions/: index.html
neurosurf_labs/: self_enhance.ipynb  usage.ipynb
neurosurf_labs/tools/: calculator.py  codegen.py  docs_update.py  fs_write.py  git_ops.py
neurosurfer/: __init__.py  __main__.py  cli.py  config.py
neurosurfer/agents/: __init__.py  agentic_loop.py  base.py  lexical.py  oneshot.py  rag_retriever_agent.py  react_agent.py  sql_agent.py  tools_router_agent.py  trace.py
neurosurfer/app/: __init__.py  banner.py
neurosurfer/architect/: __init__.py  build.py  conversation.py  refine.py  schemas.py  tool_author.py
neurosurfer/cache/: __init__.py  _serde.py  base.py  disk.py  embedder.py  memory.py  provider.py
neurosurfer/cli/: __init__.py  main.py  processes.py  serve.py  utils.py
neurosurfer/config/: __init__.py  base.py  (+10 more)
neurosurfer_labs/: agent_return.json  blog_workflow.yml  calc_and_explain_flow.yml  calc_and_explain_flow_new.yml  docgen_workflow.yml  graph_agent.ipynb  graph_agent_results.json  models.ipynb  self_enhance.ipynb  server.ipynb  test.ipynb  weather_tool.py
neurosurferui/: .gitignore  Dockerfile  README.md  example.env  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
observability/: index.html
scripts/: build_ui.sh  gen_button_svgs.py  svg_to_png.py  try_agent_lmstudio.py  try_web_search.py
search/: search_index.json
server/: index.html
studio/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
stylesheets/: extra.css
tests/: _llm_test_provider.py  fakes.py  test_agent_loop.py  test_architect_agent.py  test_architect_agent_llm.py  test_architect_builds_api.py  test_architect_gap_resolution.py  test_architect_knowledge.py  test_architect_no_cli_dep.py  test_architect_phase6.py  test_architect_verify.py  test_cache.py  test_cli.py  test_coerce.py  test_config.py  test_context_manager.py  test_general_tools.py  test_generated_tools.py  test_graph_builder_roundtrip.py  test_graph_control_flow.py  test_graph_error_routing.py  test_graph_iteration.py  test_graph_llm_integration.py  test_graph_state_expressions.py  test_graph_subgraph_input.py  test_hardening.py  test_ingest.py  test_mcp_client.py  test_memory.py  test_observability_exporters.py  test_observability_workflow.py  test_oneshot_agent.py  test_phase6.py  test_provider_parity.py  test_python_env_management.py  test_python_exec.py  test_react_agent.py  test_reliability.py  test_runtime_maturation.py  test_server.py  (+18 more)
tutorials/: 00_installation.ipynb  00_neurosurfer_quickstart.ipynb  01_providers_and_agents.ipynb  02_custom_tools.ipynb  03_graph_agents.ipynb  04_mcp_servers.ipynb  05_capstone_insight_engine.ipynb  06_architect.ipynb  06_capstone_sql_agent.ipynb  index.html
(+670 files in other folders)
