[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurosurfer"
version = "1.0.0"
description = "Build intelligent apps that blend LLM reasoning, tools, and retrieval — with a ready-to-run OpenAI-compatible gateway. CPU-only or GPU-accelerated."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Neurosurfer Team", email = "naumanhsa965@gmail.com" }]
maintainers = [{ name = "Neurosurfer Team", email = "naumanhsa965@gmail.com" }]
keywords = [
    "agent", "llm", "agentic", "rag", "anthropic", "openai", "claude",
    "ai-agent", "local-llm", "vllm", "ollama", "lm-studio", "tool-use",
    "openai-compatible", "fastapi", "cli", "neurosurfer",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Environment :: Console",
    "Typing :: Typed",
]

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.0",  # rag/config.py (ChunkerConfig BaseSettings)
    "anyio>=4.0",              # vendored runtime chat-model concurrency (sync<->async bridging)
    "pyyaml>=6.0",
    "rich>=13.0",
    "httpx>=0.27",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
    "build",
    "twine",
]
local = [
    "tiktoken>=0.7",   # accurate token counting for OpenAI-compatible local models
]
search = [
    "ddgs>=6.0",            # free DuckDuckGo search backend (no API key)
    "beautifulsoup4>=4.12", # HTML body extraction
    "lxml>=5.0",            # fast parser backend for bs4
    "rank-bm25>=0.2",       # query-aware chunk ranking (pure-python fallback if absent)
]
browser = [
    "playwright>=1.40",     # headless browser for the `browse` tool (run: playwright install chromium)
]

# ── Optional heavy backends (local inference) ───────────────────────────────────
# The core executor runs on the base install. These extras add optional capabilities;
# their imports are lazy so a base install never requires them.
local-models = [
    "torch>=2.2",                 # local inference backends
    "transformers>=4.56",
    "accelerate>=0.30",
    "sentencepiece>=0.2",
    # optional, install as needed for their backends:
    #   "unsloth>=2025.10", "llama-cpp-python>=0.3", "bitsandbytes>=0.43"
]
rag = [
    "chromadb>=1.0",              # vector store for RAG nodes
    "sentence-transformers>=5.1", # embeddings
    "SQLAlchemy>=2.0",            # SQL tools / metadata
    "python-docx>=1.1",           # DOCX file reader
    "PyMuPDF>=1.24",              # PDF file reader (fitz)
    "python-pptx>=0.6",          # PPTX file reader
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]
serve = [
    "fastapi>=0.110,<1.0",       # OpenAI-compatible workflow serving gateway
    "uvicorn[standard]>=0.29",
]
mcp = [
    "mcp>=1.2",                  # Model Context Protocol client/server SDK
]
observability = [
    "langfuse>=2.0,<3",                    # native LLM-observability backend (traces, cost, evals)
    "opentelemetry-sdk>=1.20",             # vendor-neutral tracing substrate
    "opentelemetry-exporter-otlp>=1.20",   # OTLP export → Phoenix / Grafana / Datadog / Langfuse
]

[project.urls]
Homepage = "https://github.com/NaumanHSA/neurosurfer"
Repository = "https://github.com/NaumanHSA/neurosurfer"
Issues = "https://github.com/NaumanHSA/neurosurfer/issues"
Changelog = "https://github.com/NaumanHSA/neurosurfer/blob/main/CHANGELOG.md"

[project.scripts]
neurosurfer = "neurosurfer.app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["neurosurfer"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "fixtures/",
    "scripts/",
    ".github/",
    "*.md",
    "!README.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# Vendored neurosurfer tracing — linted as-is; do not reformat (pre-existing lint
# debt from the vendored code; clean up if/when tracing is rewritten).
exclude = [
    "neurosurfer/tracing/**",   # pre-existing lint debt in vendored tracing — clean up later
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = false
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
